Fix h1 alignment on demo page when it wraps

--- a/demo/css/demo.css
+++ b/demo/css/demo.css
@@ -43,6 +43,8 @@ h1 {
 	font-size: 45px;
 	color: #dc9656;
 	font-weight: 700;
+	text-indent: -55px;
+	padding-left: 55px;
 }
 
 h4 {
